# WeeklyAutomationReport

./: Dockerfile  EMA_BE_EA_WAR_2024-03-18.pptx  EMA_BE_EA_WAR_2024-03-19.pptx  Weekly_Meeting.py  app.py  config.json  output_presentation.pptx  pyproject.toml  readme.txt  requirements.txt  weeklyreport.py
Weekly_Files/: Warstein_Azarmipour_11.csv  Warstein_Krishnan_11.csv  Warstein_Putnik_11.csv
